---
global:
  name: File-Find-Upwards
releases:
  - author: 'Marcel Gruenauer <marcel@cpan.org>'
    changes:
      - original version
      - '.shipit: fixed svk.tagpattern and commit.header'
    date: 2008-05-17T16:51:09Z
    tags: []
    version: 0.01